@@ -50,18 +50,6 @@ java {
     }
 }
 
-tasks.withType(JavaCompile).configureEach {
-    options.compilerArgs += [
-            '--add-modules', 'jdk.incubator.vector'
-    ]
-}
-
-tasks.withType(JavaExec).configureEach {
-    jvmArgs += [
-            '--add-modules', 'jdk.incubator.vector'
-    ]
-}
-
 test {
     useJUnitPlatform()
 }
